parslers-benchmark/src/tests/invalid/semanticErr/function/functionOverArgs.wacc
# function call with too many arguments

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f(int a, int b) is
		return 0 
	end
	int x = call f(1,2,3);
	println x
end
	
